[grid] Replace Guava map and set with Java equivalent for Distributor