@@ -22,8 +22,6 @@ import static org.openqa.selenium.grid.data.Availability.DRAINING;
 import static org.openqa.selenium.grid.data.Availability.UP;
 import static org.openqa.selenium.internal.Debug.getDebugLogLevel;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.net.URI;
 import java.time.Duration;
 import java.util.ArrayList;
@@ -306,11 +304,11 @@ public class LocalNodeRegistry implements NodeRegistry {
 
   @Override
   public void runHealthChecks() {
-    ImmutableMap<NodeId, Runnable> nodeHealthChecks;
+    Map<NodeId, Runnable> nodeHealthChecks;
     Lock readLock = this.lock.readLock();
     readLock.lock();
     try {
-      nodeHealthChecks = ImmutableMap.copyOf(allChecks);
+      nodeHealthChecks = Map.copyOf(allChecks);
     } finally {
       readLock.unlock();
     }
@@ -363,7 +361,7 @@ public class LocalNodeRegistry implements NodeRegistry {
       return model.getSnapshot().stream()
           // Filter nodes are UP and have capacity (available slots)
           .filter(node -> UP.equals(node.getAvailability()) && node.hasCapacity())
-          .collect(ImmutableSet.toImmutableSet());
+          .collect(Collectors.toUnmodifiableSet());
     } finally {
       readLock.unlock();
     }
@@ -405,7 +403,7 @@ public class LocalNodeRegistry implements NodeRegistry {
   @Override
   public boolean isReady() {
     try {
-      return ImmutableSet.of(bus).parallelStream()
+      return Set.of(bus).parallelStream()
           .map(HasReadyState::isReady)
           .reduce(true, Boolean::logicalAnd);
     } catch (RuntimeException e) {
